[gd_scene load_steps=8 format=1]

[ext_resource path="res://inner_background.png" type="Texture" id=1]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=2]
[ext_resource path="res://soda_pricing.gd" type="Script" id=3]
[ext_resource path="res://little_background.png" type="Texture" id=4]
[ext_resource path="res://lower.png" type="Texture" id=5]
[ext_resource path="res://raise.png" type="Texture" id=6]
[ext_resource path="res://popcorn_pricing.gd" type="Script" id=7]

[node name="concessions_pricing" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.436295, 0.96681 )
transform/scale = Vector2( 0.0500352, 0.0639504 )
texture = ExtResource( 1 )

[node name="goods" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = -28.0
margin/right = 113.0
margin/bottom = 40.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Goods"
visible_characters = -1

[node name="price" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = -28.0
margin/right = 184.0
margin/bottom = 60.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Price"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = -28.0
margin/right = 160.0
margin/bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Range"
visible_characters = -1

[node name="supply_one" type="Node2D" parent="."]

transform/pos = Vector2( 0.0427628, -5.58634 )
transform/scale = Vector2( 0.944782, 0.147738 )
script/script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="supply_one"]

transform/pos = Vector2( 22.2733, -1.8282 )
transform/scale = Vector2( 0.0113594, 0.0538956 )
texture = ExtResource( 4 )

[node name="name" type="RichTextLabel" parent="supply_one"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -31.0
margin/top = -29.0
margin/right = 176.0
margin/bottom = 25.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Soda"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="supply_one"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -29.0
margin/right = 158.0
margin/bottom = 33.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="supply_one"]

rect/scale = Vector2( 2, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = -29.0
margin/right = 16.0
margin/bottom = -11.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="supply_one"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -29.0
margin/right = 92.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="supply_one"]

rect/scale = Vector2( 2, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = -29.0
margin/right = 29.0
margin/bottom = -11.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="supply_two" type="Node2D" parent="."]

transform/pos = Vector2( 0.0189743, 15.6438 )
transform/scale = Vector2( 0.944782, 0.147738 )
script/script = ExtResource( 7 )

[node name="Sprite1" type="Sprite" parent="supply_two"]

transform/pos = Vector2( 22.2985, 1.0218 )
transform/scale = Vector2( 0.0113594, 0.0525748 )
texture = ExtResource( 4 )

[node name="name" type="RichTextLabel" parent="supply_two"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -31.0
margin/top = -26.0
margin/right = 206.0
margin/bottom = 27.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Popcorn"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="supply_two"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -26.0
margin/right = 157.0
margin/bottom = 31.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="supply_two"]

rect/scale = Vector2( 2, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = -26.0
margin/right = 16.0
margin/bottom = -8.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="supply_two"]

rect/scale = Vector2( 0.1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -26.0
margin/right = 86.0
margin/bottom = 25.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.769531, 0.769531, 0.769531, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="supply_two"]

rect/scale = Vector2( 2, 3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = -26.0
margin/right = 29.0
margin/bottom = -8.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[connection signal="button_down" from="supply_one/lower" to="supply_one" method="_on_lower_button_down"]

[connection signal="button_down" from="supply_one/raise" to="supply_one" method="_on_raise_button_down"]

[connection signal="button_down" from="supply_two/lower" to="supply_two" method="_on_lower_button_down"]

[connection signal="button_down" from="supply_two/raise" to="supply_two" method="_on_raise_button_down"]


